# WP10-Cluster5-backclassification

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  search.json  sitemap.xml
chapters/: chapter1.html  chapter1.qmd  chapter2.html  chapter2.qmd
notebooks/: back_classification.ipynb  config.py  create_data.py  ml_classification.py  notebook1.ipynb  one_to_one.py  rules_classfication.py  train_model.ipynb
notebooks/utils/: create_demo_data.py  manual_classification.py  ml_classification.py  one_to_one.py  rules_classification.py  text_process.py  text_processing.py
